# swc_plugin_workspace

./: Cargo.toml  README.md
runner/: Cargo.toml
runner/src/: main.rs
swc_plugin/: Cargo.toml  README.md
swc_plugin/docs/: architecture-flow.md  config-reference.md  contributor-workflow.md
swc_plugin/src/: config.rs  file_logger.rs  lib.rs  logger.rs  plugin1.rs  plugin2.rs  plugin_config.rs  plugin_theme.rs
swc_plugin/src/analyze/: mod.rs  state.rs  visitor.rs
swc_plugin/src/config/: mod.rs  models.rs
swc_plugin/src/core/: pipeline.rs
swc_plugin/src/debug/: file_logger.rs  mod.rs
swc_plugin/src/plugin3/: mod.rs  plugin3.rs  plugin3_config.rs
swc_plugin/src/transform/: builders.rs  visitor.rs
swc_plugin/tests/: config.json  fixture.rs  plugin3_fixture.rs  plugin_theme_fixture.rs
swc_plugin/tests/fixture/home/: fixture.json  input.tsx  output.js
swc_plugin/tests/fixture/plugin3/: config.json
swc_plugin/tests/fixture/plugin3/signup/: input.tsx  output.js
swc_plugin/tests/fixture/plugin_theme/: config.json
swc_plugin/tests/fixture/plugin_theme/signup/: input.tsx  output.js
swc_plugin/tests/fixture/signup/: fixture.json  input.tsx  output.js
swc_plugin/tests/helpers/: mod.rs  plugin_process.rs
