[package]
name = "swc_plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_core = { workspace = true, features = ["ecma_plugin_transform", "ecma_visit", "ecma_ast"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
swc_core = { workspace = true, features = ["ecma_parser", "ecma_visit", "testing", "ecma_ast"]}